# intern-training

./: .gitignore  Readme  data.csv  hello.py  main.py  main2.py  readme  readme.md  test.py
day 2/: context.txt  (+3 more)
doctorPrescriptions/backend/: Dockerfile  main.py  pyproject.toml
doctorPrescriptions/backend/app/: __init__.py  alembic.ini  routers.py
doctorPrescriptions/backend/app/api/: __init__.py
doctorPrescriptions/backend/app/database/: __init__.py  database.py
doctorPrescriptions/backend/app/model/: __init__.py  patient.py  users.py
doctorPrescriptions/backend/app/schema/: ApiResponce.py  __init__.py  auth.py  createPatient.py
doctorPrescriptions/backend/app/utils/: __init__.py  jwt.py  security.py
helthcareApp/helth_care_chatbot/: main.py  pyproject.toml
helthcareApp/helth_care_chatbot/app/: routes.py
helthcareApp/helth_care_chatbot/app/database/: __init__.py  database.py
helthcareApp/helth_care_chatbot/app/dependency/: getUsers.py
helthcareApp/helth_care_chatbot/app/lib/: healthcare_chatbot_100_unique.xlsx  healthcare_chatbot_realistic_100.xlsx  healthcare_chatbot_unique_synonyms.xlsx
helthcareApp/helth_care_chatbot/app/migrations/: create_session_table.sql  create_user_table.sql  update_user_table_password.sql
helthcareApp/helth_care_chatbot/app/model/: __init__.py  chatModel.py  session.py  users.py
helthcareApp/helth_care_chatbot/app/schema/: __init__.py  auth.py  chatbotResponce.py  createSession.py  success.py
helthcareApp/helth_care_chatbot/app/services/: __init__.py  chatService.py
helthcareApp/helth_care_chatbot/app/utils/: jwt.py  passwordhashing.py  security.py
helthcareApp/helth_care_chatbot/tests/: chatApptest.py  get_all_session_test.py  test_chat_app.py
week_2/day_8/: main.py  pyproject.toml
week_2/day_8/app/: __init__.py  alembic.ini  routes.py
week_2/day_8/app/database/: __init__.py  get_db.py  session.py
week_2/day_8/app/dependency/: __init__.py
week_3/day15/backend/: main.py  pyproject.toml  run.py
(+230 files in other folders)
