[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "passlib>=1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
