[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncio>=4.0.0",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
