[project]
name = "day15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "pip>=26.1.2",
    "psycopg2>=2.9.12",
    "pytest>=9.1.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
